--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.1.0",
+    "bootstrap": "^5.2.3",
     "dotenv": "^16.0.3",
     "mysql2": "^3.3.3",
     "next": "^13.4.4",
