--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bcrypt": "^5.1.0",
     "bootstrap": "^5.2.3",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "mysql2": "^3.3.3",
     "next": "^13.4.4",
