--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-
+PORT = 3001
 DATABASE_URL='mysql://x02uksibohlrfilhncup:pscale_pw_No0fy5f7l0fuKy2nZ0CM2yp4cMGpyXY9B6bPN4lE5z1@aws.connect.psdb.cloud/upagcaon?ssl={"rejectUnauthorized":true}'
