--- a/package.json
+++ b/package.json
@@ -8,9 +8,13 @@
     "@testing-library/user-event": "^13.5.0",
     "@trendmicro/react-sidenav": "^0.5.0",
     "bcrypt": "^5.1.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
+    "express-fileupload": "^1.4.0",
+    "firebase": "^9.22.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "next": "^13.4.4",
     "react": "^18.2.0",
