--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-fileupload": "^1.4.0",
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
+    "moment": "^2.29.4",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "next": "^13.4.4",
