--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^9.22.2",
     "firebase-admin": "^11.9.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "next": "^13.4.4",
