--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.2",
-    "bootstrap": "^5.2.3",
+    "bootstrap": "^5.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.1.3",
     "express-fileupload": "^1.4.0",
@@ -21,6 +21,7 @@
     "mysql2": "^3.3.3",
     "next": "^13.4.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.11.2",
